# spettro

./: .gitignore  AUTHORS  BUGS  COPYING  DESIGN  HACKING  INSTALL  Makefile  Makefile.am  README  TODO  WORKS  alloc.c  alloc.h  args.c  args.h  audio.c  audio.h  audio_cache.c  audio_cache.h  audio_file.c  audio_file.h  audiofile.c  audiofile.h  autogen.sh  axes.c  axes.h  barlines.c  barlines.h  build.sh  cache.c  cache.h  calc.c  calc.h  colormap.c  colormap.h  config.h  configure.ac  convert.c  convert.h  (+50 more)
debian/: .gitignore  changelog  control  copyright  docs  menu  rules  watch
s/: build  check-builds
